--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ img {
     margin-right: 76px;
     transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
     padding-top: 24px;
+    padding-left: 16px;
     padding-bottom: 24px;
 
     text-decoration: none;
@@ -1135,6 +1136,10 @@ padding-bottom: 120px;
 @media screen and (min-width: 480px) {
     .container {
         max-width: 480px;
+    }
+
+    .logo {
+        padding-left: 0;
     }
 
     .modal {
