--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,8 @@ img {
 
 .container-nav {
     display: flex;
-    max-width: 428px;
-    padding-left: 0px;
+    max-width: 426px;
+    padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
 }
@@ -68,10 +68,8 @@ img {
     text-transform: uppercase;
     color: #2E2F42;
 
-    margin-right: 76px;
     transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
     padding-top: 24px;
-    padding-left: 16px;
     padding-bottom: 24px;
 
     text-decoration: none;
@@ -198,6 +196,7 @@ img {
     margin-right: 0;
 }
 .auto-nav-main {
+    display: none;
     margin-left: auto;
 }
 
@@ -271,7 +270,8 @@ color: var(--active-color);
 
 .menu-open {
     background: #ffffff;
-    border: solid transparent;
+    border: none;
+    margin-left: auto;
 }
 
 .burger {
@@ -301,13 +301,18 @@ color: var(--active-color);
         height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        margin-left: auto;
+        margin-right: auto;
      }
 
   
 
     .mob-menu-item:not(:last-child) {
         margin-bottom: 40px;
+    }
+
+    .menu-top {
+        margin-bottom: auto;
     }
 
     
@@ -364,8 +369,8 @@ text-decoration: none;
     background-size: cover;
     max-width: 1440px;
     margin: 0 auto;
-    padding-bottom: 188px;
-    padding-top: 188px;
+    padding-bottom: 112px;
+    padding-top: 112px;
 }
 
 @media (min-device-pixel-ratio: 2),
@@ -456,9 +461,10 @@ text-decoration: none;
 }
 
 .section-text {
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.02; 
+    letter-spacing: 0.02em; 
     color: var(--main-text-color);
 }
 
@@ -592,7 +598,7 @@ padding-bottom: 120px;
 }
 
 .costumer-item {
-    width: 168px;
+    width: 190px;
     height: 88px;
 }
 
@@ -762,7 +768,6 @@ padding-bottom: 120px;
     text-transform: uppercase;
     color: #F4F4FD;
     text-decoration: none;
-    padding-left: 65px;
 }
 
 .footer-logo, .logo-one {
@@ -774,6 +779,7 @@ padding-bottom: 120px;
     color: #000000;
 }
 .logo-main-footer {
+    text-align: center;
     margin-bottom: 72px;
 }
 
@@ -785,6 +791,7 @@ padding-bottom: 120px;
     letter-spacing: 0.02em;
     color: #E7E9FC;
     margin-top: 16px;
+    text-align: left;
 }
 
 /* -----PORTFOLIO------ */
@@ -1131,16 +1138,22 @@ padding-bottom: 120px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+@media screen and (min-width: 430px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/Dark-bg-tablet.jpg);
+    }
+
+    @media (min-device-pixel-ratio: 2),
+     (min-resolution: 192dpi),
+     (min-resolution: 2dppx) {
+     .hero {
+background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/Dark-bg-tablet2x.jpg);
+}
+}
+}
 
 
 @media screen and (min-width: 480px) {
-    .container {
-        max-width: 480px;
-    }
-
-    .logo {
-        padding-left: 0;
-    }
 
     .modal {
         width: 392px;
@@ -1164,13 +1177,13 @@ padding-bottom: 120px;
     }
 
     .container-nav {
-        max-width: 768px;
+        max-width: 766px;
         display: flex;
+        align-items: center;
     }
 
     .logo {
         margin-right: 120px;
-        margin-left: 16px;
     }
 
     .site-nav-main {
@@ -1224,7 +1237,7 @@ padding-bottom: 120px;
         }
     
         .site-nav .item:not(:last-child) {
-            margin-right: 40px;
+            margin-bottom: 8px;
         }
     
         .site-nav .item:last-child {
@@ -1232,8 +1245,8 @@ padding-bottom: 120px;
         }
 
         .auto-nav-main {
+            display: block;
             margin-left: auto;
-            margin-top: 24px;
         }
 
         .auth-nav {
@@ -1267,17 +1280,9 @@ padding-bottom: 120px;
             display: none;
         }
 
-        .hero {
-            background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/Dark-bg-tablet.jpg);
+        .mob-menu>.container-mob {
+            display: none;
         }
-
-        @media (min-device-pixel-ratio: 2),
-         (min-resolution: 192dpi),
-         (min-resolution: 2dppx) {
-         .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/Dark-bg-tablet2x.jpg);
-  }
-}
 
 
     
@@ -1288,16 +1293,15 @@ padding-bottom: 120px;
     }
 
     .team {
-        padding-bottom: 0;
+        padding-bottom: 104px;
     }
 
-    .team-link:nth-last-child(-n+2) {
-            margin-bottom: 72px;
-        }
+    .main-team {
+        gap: 72px 24px;
+    }
 
-
-    .team-link {
-        margin-left: 24px;
+    .team-link:not(:last-child) {
+        margin-bottom: 0px;
     }
 
     .costumers>.container {
@@ -1310,6 +1314,7 @@ padding-bottom: 120px;
     }
 
     .costumer-item {
+         width: 168px;
         flex-basis: calc((100% - 48px) / 3);
     }
 
@@ -1319,9 +1324,12 @@ padding-bottom: 120px;
         gap: 72px 24px;
     }
 
+    .section-discription:not(:last-child) {
+        margin-bottom: 0;
+    }
+
     .section-discription {
         width: calc(100% / 2 - 24px);
-        margin-left: auto;
     }
 
     .section-title {
@@ -1329,18 +1337,17 @@ padding-bottom: 120px;
     }
 
     .container-wrap {
-        max-width: 768px;
+        max-width: 582px;
         margin-left: 108px;
         justify-content: start;
-    
-    }
-
-    .footer-logo {
-        padding-left: 0;
     }
 
     .logo-main-footer {
         margin-right: 24px;
+    }
+
+    .footer-logo {
+        padding-left: 0;
     }
 
     .contact-text {
@@ -1381,7 +1388,7 @@ padding-bottom: 120px;
 }
 
 .logo {
-    margin-right: 72px;
+    margin-right: 76px;
 }
 
 .auth-nav {
@@ -1507,6 +1514,11 @@ padding-bottom: 120px;
 
 .logo-main-footer {
     margin-right: 120px;
+    margin-bottom: 0;
+}
+
+.social-media {
+    margin-bottom: 0;
 }
 
 .footer-form {
